--- a/app/superbirdjumper3/index.html
+++ b/app/superbirdjumper3/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
         <title>Superbirdjumper3</title>
-        <script src="../cdn.js"></script>
+        <script src="../../share/cdn.js"></script>
         <script src="./constants.js"></script>
         <script src="./game.js"></script>
         <script src="./app.js" type="module"></script>
