--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
     </style>
 </head>
 <body>
-    <iframe src="desktop/index.html" allow="fullscreen"></iframe>
+    <iframe src="app/desktop/index.html" allow="fullscreen"></iframe>
 </body>
 </html>
