--- a/app/desktop/index.html
+++ b/app/desktop/index.html
@@ -120,6 +120,8 @@ createApp({
             { id: 3, title: 'Files', icon: '📂', path: '../../app/files/index.html' },
             { id: 4, title: 'SBJ3', icon: '🐦', path: '../../app/superbirdjumper3/index.html' },
             { id: 5, title: 'Terminal', icon: '📦', path: '../../app/terminal/index.html'},
+            { id: 6, title: 'Tictactoe', icon:'🌀', path: '../../app/tictactoe/index.html'},
+            { id: 7, title: 'Viewer', icon:' 🖼️', path: '../../app/viewer/index.html'},
         ];
 
         // HaGeZi Multi Mirror Integration (AdBlocker)
