--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>Avero</title>
+    <link rel="icon" href="/share/favicon.ico">
     <style>
         /* 2. Reset everything and hide overflow */
         html, body {
