--- a/app/desktop/index.html
+++ b/app/desktop/index.html
@@ -118,10 +118,10 @@ createApp({
             { id: 1, title: 'Calculator', icon: '🔢', path: '../../app/calculator/index.html' },
             { id: 2, title: 'Chess', icon: '♟️', path: '../../app/chess/index.html' },
             { id: 3, title: 'Files', icon: '📂', path: '../../app/files/index.html' },
-            { id: 4, title: 'SBJ3', icon: '🐦', path: '../../app/superbirdjumper3/index.html' },
-            { id: 5, title: 'Terminal', icon: '📦', path: '../../app/terminal/index.html'},
-            { id: 6, title: 'Tictactoe', icon:'🌀', path: '../../app/tictactoe/index.html'},
-            { id: 7, title: 'Viewer', icon:' 🖼️', path: '../../app/viewer/index.html'},
+            { id: 4, title: 'Superbirdjumper3', icon: '🐦', path: '../../app/superbirdjumper3/index.html' },
+            { id: 5, title: 'Stopwatch', icon: '⌚', path: '../../app/stopwatch/index.html'},
+            { id: 6, title: 'Terminal', icon: '📦', path: '../../app/terminal/index.html'},
+            { id: 7, title: 'Tictactoe', icon:'🌀', path: '../../app/tictactoe/index.html'},
         ];
 
         // HaGeZi Multi Mirror Integration (AdBlocker)
